# QA_RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_ingestion_pipeline.py  003_answer_pipeline.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  auth.py  conversations.py  documents.py  health.py
backend/app/cli/: reconcile_ingestion.py
backend/app/core/: config.py  pagination.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  citation.py  conversation.py  document.py  document_chunk.py  message.py  user.py
backend/app/schemas/: __init__.py  auth.py  conversation.py  document.py  user.py
backend/app/services/: answer_pipeline.py  async_document_upload.py  chunking.py  citation_mapper.py  context_packer.py  conversation.py  conversation_errors.py  conversation_scope.py  document_extraction.py  document_ingestion_repository.py  document_pipeline.py  embeddings.py  hybrid_retrieval.py  ingestion.py  ingestion_errors.py  ingestion_factory.py  ingestion_queue.py  ingestion_reconciliation.py  ingestion_types.py  lexical_retriever.py  llm_provider.py  prompt_builder.py  qdrant_collection.py  readiness.py  redis.py  retrieval_types.py  semantic_cache.py  semantic_chunk_search.py  session.py  storage.py  vector_store.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_worker_config_files.py
backend/tests/api/: test_auth.py  test_conversation_stream.py  test_conversations.py  test_documents.py  test_health.py
backend/tests/core/: test_config.py  test_pagination.py
backend/tests/models/: test_metadata.py
backend/tests/services/: test_answer_pipeline.py  test_async_document_upload.py  test_chunking.py  test_conversation.py  test_conversation_scope.py  test_document_extraction.py  test_document_ingestion_repository.py  test_document_pipeline.py  test_embeddings.py  test_hybrid_retrieval.py  test_ingestion.py  test_ingestion_errors.py  test_ingestion_factory.py  test_ingestion_queue.py  test_ingestion_reconciliation.py  test_prompt_builder.py  test_qdrant_collection.py  test_readiness.py  test_semantic_cache.py  test_semantic_chunk_search.py  test_session.py  test_storage.py  test_vector_store.py
backend/tests/worker/: test_celery_app.py  test_tasks.py
docs/superpowers/notes/: 2026-05-28-qa-rag-frontend-branch-context.md
docs/superpowers/plans/: 2026-05-28-qa-rag-frontend-implementation.md
docs/superpowers/specs/: 2026-05-28-qa-rag-frontend-design.md
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/chat/: ChatInput.tsx  ChatThread.tsx  CitationCard.tsx  CitationPanel.tsx  ManageActiveDocumentsDialog.tsx  MessageBubble.tsx
frontend/src/components/documents/: DocumentCard.tsx  DocumentList.tsx  UploadPanel.tsx
frontend/src/pages/: Chat.tsx  Login.tsx  Register.tsx
frontend/src/services/: apiClient.ts  authService.ts  chatService.ts  conversationStream.ts  documentService.ts
frontend/src/store/: ActiveConversationScopeContext.tsx  ConversationContext.tsx  DocumentPipelineContext.tsx  SessionContext.tsx  SimulationProfileContext.tsx
frontend/src/types/: index.ts
(+23 files in other folders)
