[project]
name = "qa-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "qdrant-client>=1.9.0",
  "redis>=5.0.0",
  # Explicitly excluded from first pass:
  # tiktoken      — char-based chunking is tokenizer-independent by design
  # pytesseract   — OCR deferred; failed docs retained for future retry
  # pdfplumber    — table extraction deferred; pymupdf sufficient for text PDFs
  # celery/redis  — async worker deferred; reconciliation via CLI only
  # boto3/s3      — storage abstraction deferred; local/simple store for now
  "pymupdf>=1.24.0",
  "openai>=1.0.0",
  "tenacity>=8.2.0",
]

[dependency-groups]
dev = [
  "black>=24.0.0",
  "flake8>=7.0.0",
  "pre-commit>=3.6.0",
]
