[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-rag-backend"
version = "0.1.0"
description = "FastAPI backend for QA RAG"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.115.0",
  "pydantic-settings>=2.6.0",
  "pyjwt>=2.9.0",
  "pwdlib[argon2]>=0.2.1",
  "python-multipart>=0.0.12",
  "qdrant-client>=1.12.0",
  "redis>=5.1.0",
  "sqlalchemy[asyncio]>=2.0.36",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20.0",
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
